way to victory added #27

--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -12,9 +12,9 @@
 		<p>blablabla</p>
 		<br>
 		<br>
-		<button id="inspect-btn">inspecter les données</button>
-		<button id="selectionEnd-btn">accepter les données</button>
-		<button id="unselect-btn">déselectionner tout</button>
+		<button id="inspect-btn">Inspecter les données</button>
+		<button id="selectionEnd-btn">Terminer la selection</button>
+		<button id="unselect-btn">Déselectionner tout</button>
 		<div id="maDiv" class="w3-responsive "></div>
 	</body>
 	<script src="../../../sa.js"></script>
