added new time passed and day cycle

--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -60,7 +60,7 @@
 		<iframe id="app-iframe" class="border-radius-bottom" src="blank.html" style="border:5px #e96d6d; background-color: white; height: calc(100% - 36px);" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" width="100%" allowfullscreen></iframe>
 	</div>
 
-	<b><span class="w3-text-black w3-right-align w3-margin w3-display-bottomright" style="margin-bottom: 4px;" id="clock"></span></b>
+	<span class="w3-text-black w3-right-align w3-margin w3-display-bottomright" style="margin-bottom: 4px;" id="clock"></span>
 </body>
 <script src="../sa.js"></script>
 <script src="../common.js"></script>
