--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -52,6 +52,11 @@
 		<center><h5 class="w3-text-white"><b>Miracle DB</b></h5></center>
 	</div>
 
+	<div appname="agenda" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 170px;">
+		<center><i class="fa-solid fa-calendar-days w3-jumbo w3-center w3-text-white"></i></center>
+		<center><h5 class="w3-text-white"><b>Agenda</b></h5></center>
+	</div>
+
 	<div id="app-container" class="hidden w3-animate-zoom" style="position: absolute; top: 20px; left: 20px; width: calc(100% - 40px); height: calc(100% - 100px)">
 		<div class="w3-block border-radius-top backdrop-blur" style="height: 36px;">
 			<h4 class="no-margin w3-center" id="app-name">AppName</h4>
