btn txt changed #2

--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -13,7 +13,7 @@
 		<br>
 		<br>
 		<button id="inspect-btn">Inspecter les données</button>
-		<button id="selectionEnd-btn">Terminer la selection</button>
+		<button id="selectionEnd-btn">Tout ajouter à la base</button>
 		<button id="unselect-btn">Déselectionner tout</button>
 		<div id="maDiv" class="w3-responsive "></div>
 	</body>
