--- a/src/www/gameover/page2.html
+++ b/src/www/gameover/page2.html
@@ -50,7 +50,7 @@
 	  <div class="container">
 		<div class="box"></div> <!-- Première boîte -->
 		<div class="box middle">
-			<div class="w3-panel w3-sand">
+			<div class="w3-panel w3-round w3-sand">
 				<span style="font-size:150px;line-height:0.6em;opacity:0.2">❝</span>
 				<p class="w3-xlarge" style="margin-top:-40px "><i id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non massa vitae risus fermentum ullamcorper.
 				Phasellus risus urna, ornare in aliquam id, porttitor sit amet sapien. Nulla facilisi.</i></p>
