--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -36,7 +36,7 @@
 	<div class="w3-container data-card w3-padding">
 
 	</div>
-
+	<script src="../../../sa.js"></script>
 	<script src="../../../common.js"></script>
 	<script src="app.js"></script>
 
