--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -124,7 +124,8 @@
 			</div>
 		</div>
 	</center>
-
+	
+	<script src="../../../sa.js"></script>
 	<script src="../../../common.js"></script>
 	<script src="app.js"></script>
 
