add button in agenda app

--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -124,7 +124,9 @@
 			</div>
 		</div>
 	</center>
-	
+
+	<button class="w3-button w3-teal w3-display-bottomright	w3-margin-32 w3-round-xxlarge w3-large"><i class="fa-solid fa-plus"></i> Créer un événement</button>
+
 	<script src="../../../sa.js"></script>
 	<script src="../../../common.js"></script>
 	<script src="app.js"></script>
