--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -75,6 +75,7 @@
 		}
 
 		.agenda-item {
+			font-weight: bolder;
 			font-size: 1em;
 			color: #333;
 			padding-bottom: 10px;
@@ -96,30 +97,25 @@
 	<center>
 		<div class="w3-container data-card w3-padding">
 			<div class="agenda-container">
-				<!-- Anneaux à gauche -->
+				<!-- Anneaux -->
 				<div class="agenda-rings left">
-				<div class="ring"></div>
-				<div class="ring"></div>
-				<div class="ring"></div>
+					<div class="ring"></div>
+					<div class="ring"></div>
+					<div class="ring"></div>
 				</div>
-			
-				<!-- Anneaux à droite -->
 				<div class="agenda-rings right">
-				<div class="ring"></div>
-				<div class="ring"></div>
-				<div class="ring"></div>
+					<div class="ring"></div>
+					<div class="ring"></div>
+					<div class="ring"></div>
 				</div>
 			
 				<!-- En-tête -->
-				<div class="agenda-header">
-				Mon Agenda
-				</div>
+				<div class="agenda-header"> Évènements passés </div>
 			
 				<!-- Contenu -->
 				<div class="agenda-content">
-				<div class="agenda-item">Formation sur le SQL - 10/12/2024</div>
-				<div class="agenda-item">Prise de congé - 15/12/2024</div>
-				<div class="agenda-item">Réunion projet - 18/12/2024</div>
+					<div class="agenda-item">Formation sur le SQL - Jour 2</div>
+					<div class="agenda-item">Formation sur le SQL - Jour 2</div>
 				</div>
 			</div>
 		</div>
