--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -113,7 +113,7 @@
 				<div class="agenda-header"> Évènements passés </div>
 			
 				<!-- Contenu -->
-				<div class="agenda-content">
+				<div id="agenda-content-div" class="agenda-content">
 					<div class="agenda-item">Formation sur le SQL - Jour 2</div>
 					<div class="agenda-item">Formation sur le SQL - Jour 2</div>
 				</div>
@@ -121,7 +121,7 @@
 		</div>
 	</center>
 
-	<button class="w3-button w3-teal w3-display-bottomright	w3-margin-32 w3-round-xxlarge w3-large"><i class="fa-solid fa-plus"></i> Créer un événement</button>
+	<button id="add-event-btn" class="w3-button w3-teal w3-display-bottomright	w3-margin-32 w3-round-xxlarge w3-large"><i class="fa-solid fa-plus"></i> Créer un événement</button>
 
 	<script src="../../../sa.js"></script>
 	<script src="../../../common.js"></script>
