amelioration de la mise en forme dans l'agenda

--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -75,6 +75,7 @@
 		}
 
 		.agenda-item {
+			text-align: left;
 			font-weight: bolder;
 			font-size: 1em;
 			color: #333;
@@ -114,8 +115,7 @@
 			
 				<!-- Contenu -->
 				<div id="agenda-content-div" class="agenda-content">
-					<div class="agenda-item">Formation sur le SQL - Jour 2</div>
-					<div class="agenda-item">Formation sur le SQL - Jour 2</div>
+					<p><br><i>Aucun évènement passé pour le moment.</i><br><br></p>
 				</div>
 			</div>
 		</div>
