agenda background picture added #29

--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -14,12 +14,11 @@
 		}
 		
 		body {
-			/*
-			background-color: black;
-			background-image: url('bg.webp');
+			
+			background-image: url('desktop.png');
 			background-size: cover;
 			background-repeat: no-repeat;
-			background-position: center;*/
+			background-position: center;
 			background-color: #f3f3f3;
 			height: 100vh;
 			background-attachment: fixed;
@@ -55,7 +54,7 @@
 		.ring {
 			width: 15px;
 			height: 15px;
-			background-color: #aaa; /* Gris pour les anneaux */
+			background-color: #9b9999; /* Gris pour les anneaux */
 			border-radius: 50%;
 		}
 
