--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -75,7 +75,6 @@
 
 		.agenda-item {
 			text-align: left;
-			font-weight: bolder;
 			font-size: 1em;
 			color: #333;
 			padding-bottom: 10px;
@@ -89,6 +88,12 @@
 </style>
 </head>
 <body>
+	<template id="event-passed-entry">
+		<div class="agenda-item">
+			<span class="w3-teal w3-round-xlarge w3-padding-small element-type"></span>
+			<b class="element-title"></b>
+			<span class="w3-right element-date"></span></div>
+	</template>
 
 	<div class="w3-container w3-teal w3-padding">
 		<h2><i class="fas fa-calendar-days"></i> <b>Agenda</b></h2>
