--- a/src/www/desktop/app/database/app.html
+++ b/src/www/desktop/app/database/app.html
@@ -52,7 +52,7 @@
 				<div class="w3-grey w3-round-xlarge" style="height:12px;" id="satisfaction-rate-bar"></div>
 			</div>
 
-			<p><i class="fas fa-user-graduate"></i> <strong>Taux de compétances:</strong> <span id="skill-rate">0</span></p>
+			<p><i class="fas fa-user-graduate"></i> <strong>Taux de compétences:</strong> <span id="skill-rate">0</span></p>
 			<div class="w3-border w3-round-xlarge">
 				<div class="w3-grey w3-round-xlarge" style="height:12px;" id="skill-rate-bar"></div>
 			</div>
