--- a/src/www/login/page2.html
+++ b/src/www/login/page2.html
@@ -28,13 +28,13 @@
 	<div id="login" class="w3-display-middle w3-margin-bottom w3-animate-opacity">
 		<center><span><img src="user.png" height="100px" class="w3-margin drop-shadow" style="opacity: 80%;"/></span></center>
 		<div style="width: 300px;">
-			<center><label for="difficulty-select" class="w3-text-white"><b>Selectionnez une difficulté:</b></label></center>
+			<center><label for="difficulty-select" class="w3-text-white"><b>Sélectionnez une difficulté:</b></label></center>
 			<select id="difficulty-select" class="w3-input w3-round-xxlarge box-shadow" style="height: 38.5px; opacity: 90%;">
 				<option value=""></option>
-				<option value="1">Debutant</option>
+				<option value="1">Débutant</option>
 				<option value="2">Confirmé</option>
 				<option value="3">Expert</option>
-				<option value="4">Extreme</option>
+				<option value="4">Extrême</option>
 			</select>
 			<button id="difficulty-submit" class="w3-button w3-round-xxlarge w3-white w3-text-grey" style="position: absolute; right: 0; bottom: 0;"><i id="difficulty-submit-logo" class="fa-solid fa-right-to-bracket"></i></button>
 		</div>
