--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -15,7 +15,7 @@
 		
 		body {
 			
-			background-image: url('desktop.png');
+			background-image: url('background.png');
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-position: center;
