New DataViewer design. New game flow

--- a/src/www/desktop/app/dataViewer/app.html
+++ b/src/www/desktop/app/dataViewer/app.html
@@ -8,14 +8,12 @@
 		<title>The Data Librarian Game</title>
 	</head>
 	<body>
-		<h1>Bienvenue dans votre messagerie mail</h1>
-		<p>blablabla</p>
-		<br>
-		<br>
-		<button id="inspect-btn">Inspecter les données</button>
-		<button id="selectionEnd-btn">Tout ajouter à la base</button>
-		<button id="unselect-btn">Déselectionner tout</button>
-		<div id="maDiv" class="w3-responsive "></div>
+		<div class="w3-container w3-teal w3-padding">
+			<h2><i class="fas fa-table"></i> <b>DataViewer Pro</b></h2>
+		</div>
+		<button id="unselect-btn" class="w3-button w3-cyan w3-margin-8 w3-round-xlarge"><i class="fa-solid fa-circle-xmark"></i> Déselectionner tout</button>
+		<div id="maDiv" class="w3-responsive"></div>
+		<button id="selectionEnd-btn" class="w3-button w3-green w3-right w3-margin w3-round-xlarge">Tout ajouter à la base</button>
 	</body>
 	<script src="../../../sa.js"></script>
 	<script src="../../../common.js"></script>
