--- a/src/www/login/page2.html
+++ b/src/www/login/page2.html
@@ -30,7 +30,7 @@
 		<div style="width: 300px;">
 			<center><label for="difficulty-select" class="w3-text-white"><b>Sélectionnez une difficulté:</b></label></center>
 			<select id="difficulty-select" class="w3-input w3-round-xxlarge box-shadow" style="height: 38.5px; opacity: 90%;">
-				<option value=""></option>
+				<option value="" disabled selected hidden></option>
 				<option value="1">Débutant</option>
 				<option value="2">Confirmé</option>
 				<option value="3">Expert</option>
