--- a/src/www/desktop/app/mails/app.html
+++ b/src/www/desktop/app/mails/app.html
@@ -69,8 +69,8 @@
     <div class="w3-col" style="width: 55%; height: 100vh; border-left: 1px solid lightgray; ">
       <div id="contenu-mail">
         <div class ="w3-center">
-          <h2>Contenu de l'email</h2>
-          <p>Veuillez sélectionner un email pour afficher son contenu.</p>
+          <h2>Contenu de l'e-mail</h2>
+          <p>Veuillez sélectionner un e-mail pour afficher son contenu.</p>
           
           <template id="mail-template">
             <div style="margin: 25px 50px 50px 50px; font-size: 17px;">
