--- a/src/www/desktop/page.html
+++ b/src/www/desktop/page.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../w3.css" />
 	<link rel="stylesheet" href="../fontawesome/css/all.css" />
 	<link rel="stylesheet" href="../common.css" />
-	<title>Infodex Infinity - Desktop</title>
+	<title>Infodex Infinity - Bureau</title>
 	<style>
 		body {
 			background-color: black;
@@ -32,22 +32,22 @@
 		<center><h5 class="w3-text-white"><b>Notes</b></h5></center>
 	</div>
 
-	<div appname="credits" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 30px;">
+	<div appname="credits" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 420px; left: 30px;">
 		<center><i class="fa-regular fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
 		<center><h5 class="w3-text-white"><b>Crédits</b></h5></center>
 	</div>
 
-	<div appname="mails" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 420px; left: 30px;">
+	<div appname="mails" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 80px; left: 170px;">
 		<center><i class="fa-solid fa-square-envelope fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
 		<center><h5 class="w3-text-white"><b>Mails</b></h5></center>
 	</div>
 
-	<div appname="database" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 80px; left: 170px;">
+	<div appname="database" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 170px;">
 		<center><i class="fa-solid fa-database fa-circle-question w3-jumbo w3-center w3-text-white"></i></center>
 		<center><h5 class="w3-text-white"><b>Miracle DB</b></h5></center>
 	</div>
 
-	<div appname="agenda" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 170px;">
+	<div appname="agenda" class="backdrop-blur-light w3-round-large w3-padding-24 desktop-icon cursor-pointer w3-border w3-border-transparent w3-hover-border-white" style="top: 250px; left: 30px;" >
 		<center><i class="fa-solid fa-calendar-days w3-jumbo w3-center w3-text-white"></i></center>
 		<center><h5 class="w3-text-white"><b>Agenda</b></h5></center>
 	</div>
