--- a/src/www/desktop/app/credits/app.html
+++ b/src/www/desktop/app/credits/app.html
@@ -11,7 +11,7 @@
     <h1 style="text-align: center;" class="w3-mobile"><br><i class="fa-solid fa-computer w3-jumbo" ></i> DataLibrarian OS </h1>
     <br><br>
     <ul style="text-align: center;" class="w3-ul w3-mobile">
-      <li class="w3-xxlarge">Devs</li>
+      <li class="w3-xxlarge">Développeurs·euses</li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Florian Schmuck </li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Mélissa Wanner </li>
       <li class="w3-xlarge"><i class="fa-solid fa-user "></i> &nbsp;Priscillia Brucker </li>
