--- a/src/www/desktop/app/agenda/app.html
+++ b/src/www/desktop/app/agenda/app.html
@@ -115,11 +115,11 @@
 				</div>
 			
 				<!-- En-tête -->
-				<div class="agenda-header"> Évènements passés </div>
+				<div class="agenda-header"> Événements passés </div>
 			
 				<!-- Contenu -->
 				<div id="agenda-content-div" class="agenda-content">
-					<p><br><i>Aucun évènement passé pour le moment.</i><br><br></p>
+					<p><br><i>Aucun événement passé pour le moment.</i><br><br></p>
 				</div>
 			</div>
 		</div>
