reformulation du guide du joueur

--- a/src/www/desktop/app/notes/app.html
+++ b/src/www/desktop/app/notes/app.html
@@ -10,42 +10,57 @@
     <div class="book">
       <div class="page">
         <div class="content">
-          <h1>Guide du Médiateur des Données</h1>
+          <h1>Guide pour Data Librarian</h1>
           <h2>Quel est ton job ?</h5>
           <p>
-            Ta mission est de t'assurer que la base ne se fasse pas corrompre.
+            En bref, ton travail est de t'assurer que la base de données ne se fasse pas corrompre.
             Tu es l'intermédiaire entre les chercheurs et la base de données.
-            Il faut que tu répondes à <strong>tous</strong> leurs mails.
+            Il faut que tu répondes à leurs e-mails.
           </p>
+          <br>
+          <h3>Gérer les données</h3>
           <p>
-            Pour cela il faut que <strong>vérifie</strong> les données que tu recois par mail avant de les ajouter.
-            Dès que tu trouves une erreur <strong>sélectionne</strong> la pour la marquer.
-            Une fois que c'est fait tu peux <strong>valider</strong>, corriger et envoyer les données.
+            Chaque jour tu vas recevoir par <strong>e-mail</strong> les données qu'ils souhaitent que tu intrègres à la base.
+            Pour cela il faut que tu <strong>vérifies</strong> les données que tu recois avant de les ajouter.
+            Dès que tu trouves une erreur <strong>sélectionne-la</strong> pour la marquer.
+            Une fois que tu as tout vérifié, tu peux:
           </p>
-          <p>Tu pourras suivre ta progression dans l'application Miracle DB. 
-            C'est là que tu pourras voir si tu as laissé des erreurs passer.
-            Attention, la base ne sera plus utilisable si tu dépasses les <strong>5%</strong> de corruption, 
-            c'est pourquoi ton rôle est très important !
+            <ul>
+              <li>Renvoyer les données au chercheur qui devra les corriger lui-même, cela te prendra 2h et le chercheur sera 
+                moins satisfait mais il gagnera en compétences ;</li>
+              <li>Les corriger toi-même, le chercheur sera plus satisfait mais cela te prendra 4h.</li>
+            </ul>
+          <p>
+            Bien que déconseillé, il t'es possible d'ignorer le mail en le supprimant ou d'accepter les données sans correction. 
+            Attention, cela risque de faire baisser la satisfaction des chercheurs ou de corrompre la base.
           </p>
-          <h2>Comment repérer des données corrompues ?</h3>
+          <h3>Former les chercheurs</h3>
+          <p>Une autre composante cruciale de ton travail est de sensibiliser et former les chercheurs. Cela est long et 
+            fastidieux mais très important afin de réduire les risques de perte d'information et améliorer la collaboration.
+            Grâce à cela ils feront moins d'erreurs. <br>
+            Tu peux à tout moment commencer une <strong>formation</strong> depuis l'application 'Agenda'. 
+            Il y en a plusieurs, leurs durée et efficacité peut varier légèrement celon celle que tu choisis de faire.
+          </p>
+          <h3>Suivre ta progression</h3>
+          <p>Tu pourras suivre ta <strong>progression</strong> dans l'application 'Miracle DB'. 
+            C'est là que tu pourras voir si tu as laissé des erreurs passer. 
+            Attention, la base ne sera plus utilisable si tu dépasses les <strong>5% de corruption</strong>, 
+            c'est pourquoi ton rôle est très important ! <br>
+            C'est aussi là-bas que tu pourras consulter le niveau actuel de satisfaction et de compétences des chercheurs : 
+            <strong>0% de satisfaction</strong> et c'est perdu.
+          </p>
+          <h3>Comment repérer des données corrompues ?</h3>
           <p>
             Les données corrompues peuvent prendre plein de formes, 
             mais ce sont toutes les données <strong>illisibles</strong>, de <strong>mauvais type</strong> ou <strong>fausses</strong>.
             Certaines sont très faciles à repérer, tandis que d'autres demandent plus d'attention.
             Avec l'expérience tu sauras plus à quoi t'attendre et arrivera mieux à les trouver.
           </p>
-          <h2>Conseils et astuces</h3>
-          <p>
-            Je te conseille de ne pas trainer, <strong>chaque minute compte</strong>.
-            Aussi ce n'est pas parce que les mails peuvent êtres mis à la corbeille qu'ils doivent l'être alors n'en abuse pas.
-            Enfin tu aura un petit bonus si tu fais des sans-fautes.
-          </p>
-          <p></p>
           <p>Si tu prends tout ca en compte tu devrais avoir toutes les clés en main pour réussir, je te fais confiance pour la suite !</p>
         </div>
       </div>
     </div>
   </body>
   <script src="../../../common.js"></script>
-  <script>broadcastUpdateAppName("Notes - Guide du Médiateur des Données");</script>
+  <script>broadcastUpdateAppName("Notes - Guide pour Data Librarian");</script>
 </html>
