details added in player's notes

--- a/src/www/desktop/app/notes/app.html
+++ b/src/www/desktop/app/notes/app.html
@@ -17,7 +17,6 @@
             Tu es l'intermédiaire entre les chercheurs et la base de données.
             Il faut que tu répondes à leurs e-mails.
           </p>
-          <br>
           <h3>Gérer les données</h3>
           <p>
             Chaque jour tu vas recevoir par <strong>e-mail</strong> les données qu'ils souhaitent que tu intrègres à la base.
@@ -32,7 +31,8 @@
             </ul>
           <p>
             Bien que déconseillé, il t'es possible d'ignorer le mail en le supprimant ou d'accepter les données sans correction. 
-            Attention, cela risque de faire baisser la satisfaction des chercheurs ou de corrompre la base.
+            Attention, cela risque de faire baisser la satisfaction des chercheurs ou de corrompre la base. <br>
+            Sache aussi que certains chercheurs arrivent à la date limite pour recevoir leur financement et sont donc plus pressés que les autres.
           </p>
           <h3>Former les chercheurs</h3>
           <p>Une autre composante cruciale de ton travail est de sensibiliser et former les chercheurs. Cela est long et 
@@ -52,7 +52,7 @@
           <h3>Comment repérer des données corrompues ?</h3>
           <p>
             Les données corrompues peuvent prendre plein de formes, 
-            mais ce sont toutes les données <strong>illisibles</strong>, de <strong>mauvais type</strong> ou <strong>fausses</strong>.
+            mais ce sont toutes les données <strong>illisibles</strong>, de <strong>mauvais type / format</strong> ou <strong>fausses</strong>.
             Certaines sont très faciles à repérer, tandis que d'autres demandent plus d'attention.
             Avec l'expérience tu sauras plus à quoi t'attendre et arrivera mieux à les trouver.
           </p>
